--- a/app/src/main/res/layout/dialog_editar_bencina.xml
+++ b/app/src/main/res/layout/dialog_editar_bencina.xml
@@ -9,12 +9,16 @@ android:layout_height="wrap_content">
 <com.google.android.material.textfield.TextInputLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:hint="Fecha (yyyy/MM/dd)">
+    android:hint="Fecha">
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/etFechaEdit"
-        android:inputType="date"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:focusable="false"
+        android:clickable="true"
+        android:inputType="none"
+        android:cursorVisible="false"/>
+
 </com.google.android.material.textfield.TextInputLayout>
 
 
